Integrate Login and Register with vue js

--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.17",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^2.2.18",
+        "@vitejs/plugin-vue": "^6.0.2",
+        "sweetalert2": "^11.26.3",
+        "vue": "^3.5.24",
+        "ziggy-js": "^2.6.0"
     }
 }
